# SolarTimes

./: .gitignore  README.md  SolarTimes52xx.bas  amiga-basic.cabal
src/: Main.hs  Parse.y  Scan.x
