name: amiga-basic
version: 0.1
author: Michael Tolly
maintainer: miketolly@gmail.com
build-type: Simple
cabal-version: >= 1.10

executable amiga-basic
  hs-source-dirs: src
  main-is: Main.hs
  other-modules:
    Scan
    Parse
  build-depends:
    base
    , array
    , split
  default-language: Haskell2010
  ghc-options: -Wall
